Alignment Issue Solved

--- a/Quizzit/Content/Site.css
+++ b/Quizzit/Content/Site.css
@@ -3,3 +3,9 @@
     padding-bottom: 20px;
 }
 
+#logo {
+    display: inline-block;
+    width: 50%;
+    margin-left: -15px;
+    margin-bottom: 10px;
+}
