--- a/Quizzit/Content/quizzit/index.css
+++ b/Quizzit/Content/quizzit/index.css
@@ -9,7 +9,7 @@ textarea {
 }
 
 .jumbotron {
-    background-color: rgba(255, 216, 0, 0.5) !important;
+    background-color: rgba(255, 216, 0.8) !important;
 }
 
 .submit-button-row{
